[package]
name = "connect-four"
version = "0.1.0"
authors = ["Nakayama Daiju <42.daiju@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = ["console"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6"
rand = { version = "0.8", features = ["small_rng"] }
rand_pcg = "0.3"
getrandom = { version = "0.2", features = ["js"] }
once_cell = "1.21.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
