[package]
name = "mancala"
version = "0.1.0"
authors = ["Nakayama Daiju <42.daiju@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dependencies.mancala-rust]
git = "https://github.com/hinohi/rust-mancala.git"
version = "0.2.1"
default-features = false
features = ["serde-1"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
