[package]
name = "tic-tac-toe"
version = "0.1.0"
authors = ["Nakayama Daiju <42.daiju@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
js-sys = "0.3.77"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6.5"
rand = { version = "0.8.5", features = ["small_rng"] }
getrandom = { version = "0.2.16", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
